refactor: simplify SeatReservation module with consistent naming